<resources>

    <string name="appName">truffle</string>
    <string name="title_activity_invitations">My dates</string>
    <string name="title_activity_request_history">Date requests with:</string>
    <string name="newTimeButton">New Time</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="zipCode">ZipCode</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="lookingFor">Looking For</string>
    <string name="zipcode">Zipcode</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_search_results">Matches</string>
    <string name="title_activity_show_user_profile">Profile</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_pending_verification">PendingVerificationActivity</string>
    <string name="verificationMessage">Awesome, now look for an email from truffle in your work email inbox</string>
    <string name="noEmailDelivered">Did not get an email? Check your spam folder or click the link below</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="uploadPhotoMenuItem">Upload Photo</string>
    <string name="sendInvitationMenuItemTitle">Invite</string>
    <string name="title_activity_upload_image">Upload Image</string>
    <string name="imageCaptionLabel">Caption:</string>
    <string name="title_activity_change_date">Change Date Request</string>
    <string name="changeDateButton">Change time and/or location</string>
    <string name="sureButton">Yes!</string>
    <string name="title_activity_edit_image">Edit Image</string>
    <string name="deleteImage">Delete Image</string>
    <string name="updateCaption">Save</string>
    <string name="title_activity_authorize_amazon_payment">Amazon Payment</string>
    <string name="placesPrompt">Choose a place</string>

    <string-array name="placesList">
        <item>Uptown Espresso at Belltown</item>
        <item>Monsoon Seattle at Capitol Hill</item>
        <item>Revel</item>
        <item>Din Tai Fung</item>
    </string-array>

    <string name="chooseDate">Choose Date</string>
    <string name="chooseTime">Choose Time</string>

    <color name="button">#0101DF</color>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="gainsboro">#DCDCDC</color>
    <color name="pink">#DC143C</color>
    <color name="brown">#A52A2A</color>
    <color name="background">#3B0B0B</color>

    <string name="chooseDayLabel">Choose Date:</string>
    <string name="chooseTimeLabel">Choose Time:</string>
    <string name="chooseLocationLabel">Choose Location:</string>
    <string name="title_activity_new_date">New Date</string>

    <color name="blue">#0B3861</color>

    <string name="logoutString">Logout</string>
    <string name="forgetPassword">Forget Password</string>
    <string name="title_activity_send_forget_password_link">SendForgetPasswordLinkActivity</string>
    <string name="sendResetLink">Send Reset Link</string>
    <string name="noString">No</string>
    <string name="sendVerificationLinkAgain">Send Verification Email Again</string>
    <string name="setProfileImg">Set as my profile image</string>
    <string name="proposal">Proposals</string>
    <string name="hearts">Hearts</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="updateProfile">Update Profile</string>

</resources>