<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/invitations"
        android:icon="@drawable/dates"
        android:title="@string/proposal"
        android:orderInCategory="0"
        android:showAsAction="always"/>
    <item
        android:id="@+id/logout"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/logoutString"/>
        
    <item android:id="@+id/sendInvitation"
        android:title="@string/sendInvitationMenuItemTitle"
        android:orderInCategory="1"
        android:showAsAction="always" />

</menu>
