<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" >
    </EditText>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword" />
    

    <TextView
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/confirmPassword"
        android:layout_below="@+id/confirmPassword"
        android:layout_marginTop="15dp"
        android:text="@string/gender"
        android:textAppearance="?android:attr/textAppearanceMedium" />
   
    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
      
        android:layout_below="@+id/confirmPassword" >
       
       <RadioButton
           android:id="@+id/genderRadio1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
        
           android:checked="true"
           android:text="@string/male" />
  
       <RadioButton
           android:id="@+id/genderRadio2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           
           android:text="@string/female" />
    </RadioGroup>
   
    <TextView
        android:id="@+id/lookingFor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_below="@+id/gender"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:text="@string/lookingFor"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioLookingFor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
        android:layout_below="@+id/gender" >
       
       <RadioButton
          android:id="@+id/lookingForRadio1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"  
          android:text="@string/male" />

        <RadioButton
          android:id="@+id/lookingForRadio2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="true"
           android:text="@string/female" />
    </RadioGroup>
    
    <EditText
        android:id="@+id/zipCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lookingFor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/zipCode"
        android:inputType="number" />
    
    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zipCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/submit" 
        android:onClick="submit"/>

</RelativeLayout>
