<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:paddingLeft="10dp"  >
    
    <EditText android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email" />
    
    <EditText android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password" />
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp">
     
     <Button android:id="@+id/signInButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/signIn" 
        android:onClick="signIn"/>
     
      <Button android:id="@+id/signUpButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:onClick="signUp" />
    </LinearLayout>

</LinearLayout>
