<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

  
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:entries="@array/placesList"
        android:prompt="@string/placesPrompt" />
   
    <TextView
        android:id="@+id/chooseDate"
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseDate" 
        android:onClick="chooseDate"/>
    
    <TextView
        android:id="@+id/chooseTime"
        android:layout_marginTop="250dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseTime" 
        android:onClick="chooseTime"/>

</RelativeLayout>
