<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" >

	<LinearLayout
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	
	    <com.example.coffeearrow.helpers.SquareFrameLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent" >
	
		    <ImageView
		        android:id="@+id/imageToEdit"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:scaleType="fitCenter"
		        android:src="@drawable/ic_launcher" />
	
	    </com.example.coffeearrow.helpers.SquareFrameLayout>
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/imageCaptionLabel"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/caption"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10" >
	
	        <requestFocus />
	    </EditText>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
	        <Button
	            android:id="@+id/button2"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:onClick="updateCaption"
	            android:text="@string/updateCaption" />

	        <Button
	            android:id="@+id/button3"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:onClick="setProfileImage"
	            android:text="@string/setProfileImg" />

	        <Button
	            android:id="@+id/button1"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:onClick="deleteImage"
	            android:text="@string/deleteImage" />
	
	    </LinearLayout>
	
	</LinearLayout>
</ScrollView>