<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/newbackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp" >

            <LinearLayout
                style="@style/loginbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/content"
                    style="@style/email"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/verificationMessage"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/noEmailDelivered"
                    style="@style/email"
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/noEmailDelivered"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/sendVerificationLinkAgain"
                    style="@style/bluebutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="30dp"
                    android:onClick="sendVerificationLinkAgain"
                    android:text="@string/sendVerificationLinkAgain" />
            </LinearLayout>

            <Button
                android:id="@+id/signInButton"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="30dp"
                android:onClick="signIn"
                android:text="@string/signIn" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>